k8s/ingress-public.yml
apiVersion: networking.k8s.io
kind: Ingress
metadata:
  name: ${SERVICE_NAME}
  namespace: josh-apps
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/limit-connections: "1"
    ingress.kubernetes.io/limit-rpm: "2"
spec:
  rules:
    - host: ${HOST_URL}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${SERVICE_NAME}
                port:
                  number: 8443
  tls:
    - hosts:
        - ${HOST_URL}
      secretName: ssl-bongo
