k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ${SERVICE_NAME}
  namespace: josh-apps
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    # prevent the controller from redirecting (308) to HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # name of the secret that contains the user/password definitions
    # found here: https://kubernetes.github.io/ingress-nginx/examples/auth/basic/
    # kubectl -n namespace_here create secret generic mims-basic-auth --from-file=auth
    nginx.ingress.kubernetes.io/auth-secret: mims-basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ${HOST_URL}
      http:
        paths:
          - path: /
            backend:
              serviceName: ${SERVICE_NAME}
              servicePort: ${PORT}
  tls:
    - hosts:
        - ${HOST_URL}
      secretName: ssl-bongo
